addition of external css for the second and third page

--- a/recipes/bbq-ribs.html
+++ b/recipes/bbq-ribs.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="bbq-ribs.css"/>
 </head>
 <body>
     <header>
-        <h1>Simple BBQ Ribs</h1>
+        <h1>Odin Recipies</h1>
     </header>
     <main>
+        <h1>Simple BBQ Ribs</h1>
         <img src="https://www.allrecipes.com/thmb/66OX3AtufnrTdCq3lbF-MBsP0qE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/16448-simple-bbq-ribs-DDMFS-4x3-6c6ec5c3ddda485fbc8c855520ae8fc9.jpg">
         <h2>Description</h2>
         <p> Lean, country-style pork ribs are boiled in seasoned water until tender, 
-            then finished up in the oven under a blanket of your favorite barbecue sauce as they bake to perfection.</p>
+            then finished up in the oven under a blanket of your favorite barbecue sauce as they bake to perfection.</p>   
         <h3>Ingredients</h3>
         <ul>
             <li>2 ½ pounds country-style pork ribs</li>
