--- a/recipes/broccoli_chicken_divan.html
+++ b/recipes/broccoli_chicken_divan.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="broccoli_chicken_divan.css"/>
 </head>
 <body>
     <header>
-        <h1>Broccoli Chicken Divan</h1>
+        <h1>Odin Recipies</h1>
     </header>
     <main>
+        <h1>Broccoli Chicken Divan</h1>
         <img src="https://www.allrecipes.com/thmb/PiKO2E6vAg_c_6UXs65MQgnPZzs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8854-BroccoliChickenDivan-DDMFS-4x3-f0a68f9c9e4c4c1bac5179fc8d305f23.jpg">
         <h2>Description</h2>
         <p><b>What Is Chicken Divan?</b> Chicken divan is a classic chicken casserole that layers leftover chicken with cream soup, butter, breadcrumbs, and cheese. 
