--- a/recipes/buttered_noodles.html
+++ b/recipes/buttered_noodles.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="buttered_noodles.css"/>
 </head>
 <body>
     <header>
-        <h1>Buttered Noodles</h1>
+        <h1>Odin Recipies</h1>
     </header>
     <main>
+        <h1>Buttered Noodles</h1>
         <img src="https://www.allrecipes.com/thmb/7bUzGoNX-mlQKtf4AFIzyozFtk0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/244458-buttered-noodles-DDMFS-4x3-b9931662efa64b37883c0f73b296b124.jpg">
         <h2>Description</h2>
         <p> Saucy, buttered noodles are simple to make and perfect to serve either as-is or alongside steak, chicken, or meatballs. Butter, Parmesan cheese, salt, and pepper are all you need for this quick and easy, kid-friendly dish, 
