adjusting image and header size

--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
     <header>
         <h1>Odin Recipies</h1>
     </header>
     <main>
-        <ul>
-            <li><a href = "recipes/bbq-ribs.html">Simple BBQ Ribs</a></li>
-            <li><a href = "recipes/buttered_noodles.html">Buttered Noodles</a></li>
-            <li><a href = "recipes/broccoli_chicken_divan.html">Broccoli Chicken Divan</a></li>
-        </ul>
+        <img src="https://img.freepik.com/free-photo/male-chef-preparing-chopped-bell-pepper-restaurant-kitchen-cooking-gourmet-dish-with-fresh-ingredients-authentic-cook-preparing-vegetables-meal-with-culinary-food-recipe-close-up_482257-43539.jpg?w=740&t=st=1689511559~exp=1689512159~hmac=840ed066351ba64cfa3694fd8eb4c6de5eb55b0e966047310f558b0a5f9f4ed7">
+        <nav>
+            <a href = "recipes/bbq-ribs.html">Simple BBQ Ribs</a><br>
+            <a href = "recipes/buttered_noodles.html">Buttered Noodles</a><br>
+            <a href = "recipes/broccoli_chicken_divan.html">Broccoli Chicken Divan</a>
+        </nav>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
