--- a/recipes/broccoli_chicken_divan.html
+++ b/recipes/broccoli_chicken_divan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>broccoli_chicken_divan</title>
     <link rel="stylesheet" href="broccoli_chicken_divan.css"/>
 </head>
 <body>
