arranging layout for bbq-ribs.html and giving it a consistent theme

--- a/recipes/bbq-ribs.html
+++ b/recipes/bbq-ribs.html
@@ -12,12 +12,12 @@
         <h1>Odin Recipies</h1>
     </header>
     <main>
-        <h1>Simple BBQ Ribs</h1>
+        <h1 class="mainh1">Simple BBQ Ribs</h1>
         <img src="https://www.allrecipes.com/thmb/66OX3AtufnrTdCq3lbF-MBsP0qE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/16448-simple-bbq-ribs-DDMFS-4x3-6c6ec5c3ddda485fbc8c855520ae8fc9.jpg">
         <h2>Description</h2>
         <p> Lean, country-style pork ribs are boiled in seasoned water until tender, 
-            then finished up in the oven under a blanket of your favorite barbecue sauce as they bake to perfection.</p>   
-        <h3>Ingredients</h3>
+            then finished up in the oven under a blanket of your favorite barbecue sauce as they bake to perfection.</p>  
+        <h2>Ingredients</h2>
         <ul>
             <li>2 ½ pounds country-style pork ribs</li>
             <li>2 tablespoons kosher salt</li>
@@ -25,7 +25,7 @@
             <li>1 teaspoon ground black pepper</li>
             <li>1 cup barbeque sauce</li>
         </ul>
-        <h3>Steps</h3>
+        <h2>Steps</h2>
         <ol>
             <li>Gather all ingredients.</li>
             <li>Place ribs in a large pot and cover with water. Stir in kosher salt, garlic powder, and pepper, and bring water to a boil over medium heat. Continue to boil until ribs are tender, 40 to 45 minutes.</li>
