arranging layout for broccoli_chicken_divan.html and giving it a consistent theme

--- a/recipes/broccoli_chicken_divan.html
+++ b/recipes/broccoli_chicken_divan.html
@@ -12,7 +12,7 @@
         <h1>Odin Recipies</h1>
     </header>
     <main>
-        <h1>Broccoli Chicken Divan</h1>
+        <h1 class="mainh1">Broccoli Chicken Divan</h1>
         <img src="https://www.allrecipes.com/thmb/PiKO2E6vAg_c_6UXs65MQgnPZzs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8854-BroccoliChickenDivan-DDMFS-4x3-f0a68f9c9e4c4c1bac5179fc8d305f23.jpg">
         <h2>Description</h2>
         <p><b>What Is Chicken Divan?</b> Chicken divan is a classic chicken casserole that layers leftover chicken with cream soup, butter, breadcrumbs, and cheese. 
@@ -22,7 +22,7 @@
                  the full recipe below with step-by-step instructions, but here's what you can expect when you make this top-rated recipe: Start by steaming broccoli in
                   a saucepan, draining, and adding to a nine-inch pie plate. Add chicken, condensed soup, milk, and cheese to the plate before baking at 450 degrees F. Cook
                    the divan until it's reached a deliciously deep golden brown color, cool, and enjoy. </p>
-        <h3>Ingredients</h3>
+        <h2>Ingredients</h2>
         <ul>
             <li>1 pound chopped fresh broccoli</li>
             <li>1 ½ cups cubed, cooked chicken meat</li>
@@ -32,7 +32,7 @@
             <li>2 tablespoons dried bread crumbs</li>
             <li>1 tablespoon butter, melted</li>
         </ul>
-        <h3>Steps</h3>
+        <h2>Steps</h2>
         <ol>
             <li>Gather all ingredients.</li>
             <li>Preheat the oven to 450 degrees F (230 degrees C).</li>
