--- a/recipes/buttered_noodles.html
+++ b/recipes/buttered_noodles.html
@@ -12,19 +12,19 @@
         <h1>Odin Recipies</h1>
     </header>
     <main>
-        <h1>Buttered Noodles</h1>
+        <h1 class="mainh1">Buttered Noodles</h1>
         <img src="https://www.allrecipes.com/thmb/7bUzGoNX-mlQKtf4AFIzyozFtk0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/244458-buttered-noodles-DDMFS-4x3-b9931662efa64b37883c0f73b296b124.jpg">
         <h2>Description</h2>
         <p> Saucy, buttered noodles are simple to make and perfect to serve either as-is or alongside steak, chicken, or meatballs. Butter, Parmesan cheese, salt, and pepper are all you need for this quick and easy, kid-friendly dish, 
             although fresh herbs and a little lemon juice could be added to amp up the flavor. It's such a delicious recipe, yet I get many questions on how to make it.</p>
-        <h3>Ingredients</h3>
+        <h2>Ingredients</h2>
         <ul>
             <li>1 (16 ounce) package fettuccine noodles</li>
             <li>6 tablespoons butter, cut into pieces</li>
             <li>⅓ cup grated Parmesan cheese</li>
             <li>salt and ground black pepper to taste</li>
         </ul>
-        <h3>Steps</h3>
+        <h2>Steps</h2>
         <ol>
             <li>Gather all ingredients.</li>
             <li>Fill a large pot with lightly salted water and bring to a rolling boil. </li>
